--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.9.3",
     "babel": "^6.23.0",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
@@ -20,7 +19,8 @@
     "babel-resolver": "^1.1.0",
     "eslint": "^3.16.1",
     "eslint-plugin-babel": "^4.1.0",
-    "eslint-plugin-react": "^6.10.0"
+    "eslint-plugin-react": "^6.10.0",
+    "react-scripts": "0.9.3"
   },
   "dependencies": {
     "axios": "^0.15.2",
@@ -28,6 +28,7 @@
     "react": "^15.4.0",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.0",
+    "react-overlays": "^0.6.12",
     "react-router-dom": "next"
   },
   "scripts": {
