--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,10 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.0",
     "react-overlays": "^0.6.12",
-    "react-router-dom": "next"
+    "react-redux": "^5.0.3",
+    "react-router-dom": "next",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
